# Agentic_Chat_Bot

./: .gitignore  README.md  main.py  pyproject.toml
Data/: agent_memory.db  checkpoints.sqlite
backend/: .gitignore  README.md  chatbot.py  main.py  pyproject.toml
backend/Agent/: chatbot.py  guardrails.py
backend/GraphStates/: ChatState.py
backend/Memory/: database.py  sqlite.py
backend/Test/: AgentTest.py  ToolCallTest.py  test_guardrails.py
backend/Tools/: calculator_tool.py  memory_toos.py  rag_tool.py  search_tool.py  stock_tool.py  weather_tool.py
backend/Utils/: auth.py  helpers.py
backend/prompts/: prompt.py
frontend/: .env  app.py  index.html  next.config.mjs  package-lock.json  package.json  utils.py
frontend/src/: App.jsx  index.css
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/components/: AttachmentCard.jsx  Auth.jsx  ChatArea.jsx  ChatInput.jsx  FileCard.jsx  MessageBubble.jsx  SettingsModal.jsx  Sidebar.jsx  ToolCallsDisplay.jsx  Topbar.jsx
frontend/src/constants/: models.js  providers.js  suggestions.js
frontend/src/hooks/: useChatStore.js
frontend/src/lib/: api.js
frontend/src/utils/: dateGroups.js  fileUtils.js
